Move to double quotes

--- a/i18n/pt.toml
+++ b/i18n/pt.toml
@@ -1,5 +1,5 @@
 [filtering-for]
-  other = 'Filtrando para'
+  other = "Filtrando para"
 
 [email-subject]
-  other = 'Resposta a '
+  other = "Resposta a "
