--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,5 +1,5 @@
 [filtering-for]
-  other = 'Filtering for'
+  other = "Filtering for"
 
 [email-subject]
-  other = 'Reply to '
+  other = "Reply to "
