--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -7,5 +7,8 @@
 [email-subject]
   other = "Reply to "
 
+[email-reply]
+  other = "Reply to this post by email"
+
 [skip-link]
   other = "Skip to main content"
