--- a/i18n/pt.toml
+++ b/i18n/pt.toml
@@ -7,5 +7,8 @@
 [email-subject]
   other = "Resposta a "
 
+[email-reply]
+  other = "Responda a este post por email"
+
 [skip-link]
   other = "Pular para conteúdo principal"
